manifests/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activities-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: activities
  template:
    metadata:
      labels:
        app: activities
    spec:
      containers:
        - name: activities
          image: docker.io/immujee/openshift4:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "128m"
