manifests/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activities-service
  namespace: dev
spec:
  selector:
    app: activities
  ports:
    - port: 80
      targetPort: 80
