manifests/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: activities-route
  namespace: dev
spec:
  host: portfolio.florientdogbe.me
  to:
    kind: Service
    name: activities-service
  port:
    targetPort: 80
  tls:
    termination: edge
